:lipstick: Fixed navbar button alignment.
DaisyUI unaligned the navbar button.

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 * Navbar sticky con borde redondeado, sombra normal y sombra xl en hover 
 */
 .navbar {
-  @apply fixed top-0 left-0 m-0 flex h-screen w-1/3 flex-col border-black;
+  @apply fixed top-0 left-0 m-0 flex h-screen w-1/12 flex-col border-black;
 }
 
 .nav-logo {
@@ -30,7 +30,7 @@
 }
 
 .nav-buttons {
-  @apply fixed top-[220px] left-0 flex h-1/3 flex-col text-left;
+  @apply fixed top-[210px] left-0 ml-4 flex h-1/3 flex-col text-justify;
 }
 
 .border-test {
@@ -42,11 +42,11 @@
 * Botón redondo blanco con borde 4px de ancho azul on hover
 */
 .button {
-  @apply relative m-4 w-full p-4 text-center text-3xl transition-all hover:translate-x-2 hover:border-b-[2px] hover:border-blue-600 hover:text-blue-600;
+  @apply m-4 p-4 text-center text-3xl transition-all hover:translate-x-2 hover:border-b-[2px] hover:border-blue-600 hover:text-blue-600;
 }
 
 .button-still {
-  @apply relative m-4 p-4 text-center text-3xl transition-all hover:border-b-[2px] hover:border-blue-600;
+  @apply m-4 p-4 text-center text-3xl transition-all hover:border-b-[2px] hover:border-blue-600;
 }
 
 .sendbox-button {
@@ -57,7 +57,7 @@
 * Copia de .button pero con el borde siempre azul
 */
 .button-active {
-  @apply relative m-4 w-full translate-x-2 border-b-[2px] border-blue-600 p-4 text-center text-3xl  text-blue-600;
+  @apply relative m-4  translate-x-2 border-b-[2px] border-blue-600 p-4 text-center text-3xl  text-blue-600;
 }
 
 /*** TEXT PANEL CSS ***/
@@ -141,7 +141,7 @@
 }
 
 .user-panel-button {
-  @apply button-still absolute bottom-3 right-5 text-lg;
+  @apply button-still absolute bottom-3 right-3;
 }
 
 .user-panel-followers {
